# pico_ui

./: CMakeLists.txt  main.c
drivers/ili9486/: CMakeLists.txt  ili9486_driver.c  ili9486_driver.h
lvgl/: CMakeLists.txt  lv_conf.h  lv_port_display.c  lv_port_display.h
lvgl/porting/templates/: lv_port_disp_template.c  lv_port_disp_template.h  lv_port_lcd_stm32_template.c  lv_port_lcd_stm32_template.h
lvgl/porting/templates/osal/: lv_example_osal.c  lv_example_osal.h
src/: CMakeLists.txt  ui.c  ui.h
